@@ -11,9 +11,8 @@ AUX ejabberdctl-wrapper-3.template 908 RMD160 c5378d8e089ae1c180b7be76639a99d5ca
 AUX self-cert-v2.sh 1017 RMD160 3beb0f05e8cc3041abd2f689d31d410bc7d5088d SHA1 1f07299b2e49541dcbf5c2b81b26280bbf0b6aeb SHA256 34b2c9cb36c424ffd1117bd20b67d0f4a05168b0bc6237e287c2dcabd0e27972
 AUX ssl.cnf 1042 RMD160 47d2542942fb21f4be1e827d47eb4e0468e73910 SHA1 7347bae5a195ad158881fe5313f55ee41e85cb81 SHA256 ed066f7720fd9f4c2d57ffb2ebcbc4b2810d2b7ca22b67ec8c1dc1227baaa635
 DIST 2.1.1-mod_statsdx.patch.bz2 13041 RMD160 9cc6d71ff2a2d58b0e377a3facb564d22d46af25 SHA1 4ef326eff97283530ee137613c009fe132312644 SHA256 a290217d7fd2c338d9ddba73e25ee052a3735d7168aafd24750de113f43ebc5f
-DIST ejabberd-2.1.5.tar.gz 2278008 RMD160 7abd6bc4a03f68d03e13ee8c1ff3a5fee6098dc6 SHA1 8966d6752219c9386f48a5b8e1f2f8fb0e7477ae SHA256 31a46228c6933d7c24435753300a4d2ae2e84568a6097175dc5d4e553299dd9d
 DIST mod_shared_roster_ldap-0.5.3.tgz 663731 RMD160 c8905ccffe4bd99f77fe91d583502d0912b9a005 SHA1 5bb1991868341c7cfc995348747c43833820af2b SHA256 9e295065b60e5e37e839f7793503e9ae5e367c0a749e870cbbeeef3ce5609954
-EBUILD ejabberd-2.1.5-r9999.ebuild 9818 RMD160 f634e41495ba36512fc2ca9593c3b654b62725c8 SHA1 f8ac32e32b5d91a714b9361339a9dd7cecfaafe8 SHA256 648a73bf2e85d9a20f92da7b2ec9e2106af8b7ee89f95ee5067cd640ee9ceccc
+EBUILD ejabberd-2.1.5-r9999.ebuild 9519 RMD160 eb413bb0ef55fc61109c5296606c9d6c1873b513 SHA1 f58ca0936d85d69cd07668ac98a68e1c17d110ad SHA256 1073642f91f2a5e39c3d191700e2b720d25365f1743245794f872993a4d8a0b2
 EBUILD ejabberd-9999.ebuild 7751 RMD160 2fa8193d3d0c9004bc327c7ff2b9449dcd992116 SHA1 86fb2ad773545e0c15097207f17114d3aee5b150 SHA256 7ff4c75876f27dabf918663cb962f6fec49aa29d70f63f23f542b610e0c1bf98
 MISC ChangeLog 15334 RMD160 0eca122450fb232a5f4cc4b0dd1aeb6897f0d9fb SHA1 27c9ddb7d94efac9bad6e3b4d3aab46c0fd17710 SHA256 d21838f15f48693aa40883e4168db72f01aec5386e0b051532cd19c3a35ee684
 MISC metadata.xml 2257 RMD160 aa1561ae196104aba0523934e6c10dfeb59be6f1 SHA1 06e9c23f5710d056b7b5da20510e254de845a8cf SHA256 c46c35f00fc70de2cb605ed509226d05639ec616496e4035b3942622ea0a2207
