@@ -1,5 +1,8 @@
-AUX spectrum.cfg 2850 RMD160 826e04fd19a7469520a48cf03e1338f3b58633f2 SHA1 0647c99e5ac05b78097974ffbccfdeecec73b3c6 SHA256 7c31e98a4c7784b865ba74a0abe39062f47c0f5d0fdcc08dc13f116c17756c1c
-AUX spectrum.init 831 RMD160 585e689e8dd2270de0f479c045e1cfbcef2f31ef SHA1 e3a2a0b13610e2d7b89e9b22ba78d69fb8c2d8cb SHA256 827e3afd5103398dab564ed6828c4930fc3783c1388c061c6e916a1decc16871
-EBUILD spectrum-9999.ebuild 1111 RMD160 714c6bc902a05ae918231f123f034ca4fde5c964 SHA1 b5a847501011793b19fe34f0554c2f487460ca22 SHA256 05b4df3d6a386d3c28c33d34d8940289df9cf4f937dd480e9c0b2f2066a747ec
-MISC ChangeLog 272 RMD160 acfd5f7717c77e005c8250e9dbd397f1b42ab738 SHA1 18a8a79854108f601d13f00626f00f4cce0aee35 SHA256 6ece80aa54c47806a3f1bee8d09a353200734293889afe44920a0032601b8d5d
+AUX spectrum.cfg 4323 RMD160 cb976d122c345034511c621d461aadad0f4e1b1a SHA1 3278fa1e45ef67b33fddd7b01c41f3ad7d1982ae SHA256 6805b1a43bcb2db3f9a44066c5911b3172f0852e7de35371d3f4203e5be8dfcd
+AUX spectrum.confd 225 RMD160 c9396f00deaae74c1f2bbe985dfb857308a11879 SHA1 55a498364612d1f0093a3a2e4c79bd6aaec61b1e SHA256 53f34d4cab5ecb41613afcb42bec62dfbe427c474691c254c4f418bdd5ce0cbd
+AUX spectrum.initd 592 RMD160 f74c8e5b1a35f9362fa3cb13633caff9aa54cc76 SHA1 196671e97455614ed81b0cbd87d5831f15f55fd1 SHA256 80c37c82dcd1b867400de4e23433ec0b822418d2858b441dd464259e650bf27b
+DIST spectrum-1.4.4.tar.gz 251279 RMD160 728829637abbbc3b1d2b1a8ac9f2b9fe174d6cfe SHA1 6dae90ce8e9a590330f260c71a64ae8c84497882 SHA256 831fd7f198342b6dc7ce4f631ccfa8b3a4cd5754dfe42987bd5c0c3d2bb6460f
+EBUILD spectrum-1.4.4.ebuild 2418 RMD160 ee11a3ea4e7f3f097da84448705142a0a4bbb86b SHA1 eeceb9a6f4f8e4e90ae1570ec79e4db95def8646 SHA256 3cfa566b9d0af32619d980ad5976e8741fc7000f1b21d613106977b767e4a922
+EBUILD spectrum-9999.ebuild 2388 RMD160 3752322eb06f903870e4f730347e51e68399a5ee SHA1 134efb5d24df6840045089fa849b4d611e553da1 SHA256 16c00085b4f41ca83db0265a3ea13dcc1dffb2a844747a7277fc84622f9ee538
+MISC ChangeLog 527 RMD160 1f87bbddd00db3c0cb09bd3c276e23227337464e SHA1 0d9a103d584dd145f2e35d8f75335c620171fe5a SHA256 e4a4c9f87cb8d19a523cce969348445356112d81e654042de800c59afc214734
 MISC metadata.xml 345 RMD160 08be5a1d94c618f914ba47a3a37187ad47f8b874 SHA1 62e8a527557d1607a80907263ff4f3f14b21380f SHA256 992720606c40a0cdf873a1776cea81e967e0578af4b538008ffb4f2b6a2e819c
