@@ -1,6 +1,9 @@
 [service]
 # enable this spectrum instance
-enable = 1
+enable=1
+
+# one of: aim, facebook, gg, icq, irc, msn, myspace, qq, simple, xmpp, yahoo
+protocol=SPECTRUMGEN2PROTOCOL
 
 # component ip
 server=127.0.0.1
@@ -10,7 +13,7 @@ server=127.0.0.1
 use_proxy=0
 
 # component JID
-jid=SPECTRUMGEN2PROTOCOL.server.dom
+jid=SPECTRUMGEN2PROTOCOL.example.com
 
 # component secret
 password=secret
@@ -18,18 +21,26 @@ password=secret
 # component port
 port=5347
 
+config_interface = /var/run/spectrum/SPECTRUMGEN2PROTOCOL.sock
+
+# IP:port where filetransfer proxy binds to. This has to be public IP.
+#filetransfer_bind_address=192.0.2.1:12345
+
+# IP:port which will be sent in filetransfer request as stream host.
+#filetransfer_public_address=192.0.2.1:12345
+
 # admin JIDs - Jabber IDs of transport administrators who have access to admin adhoc commands
 # separated by semicolons
-admins=admin1@server.dom;admin2@server2.rog
+#admins=admin@example.com;foo@bar.cz
 
 # directory where downloaded files will be saved
-filetransfer_cache=/var/spool/jabber/spectrum-SPECTRUMGEN2PROTOCOL/filetransfer_cache
+filetransfer_cache=/var/lib/spectrum/SPECTRUMGEN2PROTOCOL/filetransfer_cache
 
-# one of: aim, facebook, gg, icq, irc, msn, myspace, qq, simple, xmpp 
-protocol=SPECTRUMGEN2PROTOCOL
+# URL used to acces filestransfer_cache directory from the web.
+filetransfer_web=http://example.com/files/
 
 # name of transport (this will appear in service discovery)
-name=Spectrum SPECTRUMGEN2PROTOCOL transport
+name=My SPECTRUMGEN2PROTOCOL Transport
 
 # default language
 language=en
@@ -37,59 +48,90 @@ language=en
 # transport features separated by semicolons
 # combination of: avatars, chatstate, filetransfer
 # if commented, all features will be used
-#transport_features = avatars,chatstate,filetransfer
+# This variable is DEPRECATED and will be removed in future versions. Use [features] instead.
+#transport_features = avatars;chatstate;filetransfer
 
-# if vip_mode is 1, users are divided to 2 groups according to `vip` MySQL table.
+# if vip_mode is 1, users are divided to 2 groups according to 'vip' database field
 vip_mode=0
 
-# if vip_mode is 1, you can set transport to be availabed only for VIP users by setting only_for_vip to 1.
-# it's something like white-list for transport use
+# if vip_mode is 1, you can set transport to be availabe only for VIP users by setting only_for_vip to 1.
 only_for_vip=0
 
 # if vip_mode is 1 and only_for_vip is 1, users can connect from these servers even they are not VIP.
-# it's list of hostnames separated by semicolons.
-# This feature is useful, if you want to enable transport only for users from your server, but also want to have
-# access for VIP users from another servers (for example from GTalk)
+# This feature is useful, if you want to enable transport only for users from your server, but also want
+# to give access to VIP users from other servers (for example from GTalk)
+# seperated by semicolons
 #allowed_servers=localhost
 
-# transport features separated by semicolons which wille be used for VIP users.
+# transport features separated by semicolons which will be used for VIP users.
 # combination of: avatars, chatstate, filetransfer
 # if commented, all features will be used
-vip_features = avatars,chatstate,filetransfer
+# This variable is DEPRECATED and will be removed in future versions.  Use [vip-features] instead.
+#vip_features = avatars;chatstate;filetransfer
 
 # pid file
-pid_file=/var/run/jabber/spectrum-SPECTRUMGEN2PROTOCOL.pid
+pid_file=/var/run/spectrum/SPECTRUMGEN2PROTOCOL.pid
+
+# require_tls to connect legacy network
+#require_tls=false
+
+[registration]
+# Set to 0 to disable transport registration to everyone except
+# people from host from allowed_servers list.
+#enable_public_registration=1
+
+# You can override username registered by transport user. This is useful
+# for example if you want to let users to register only their Facebook name
+# and internally connect them to facebook_name@chat.facebook.com.
+# $username variable is replaced by username which has been registered
+# by particular user. 
+#username_mask = $username@chat.facebook.com
+
+# Label used to described username field in registration form
+#username_label = Facebook username
+
+# This variable overrides default instructions text in registration form.
+#instructions = Type your Facebook name here:
+
+# Transport features, all features are enabled by default.
+[features]
+#filetransfer=1
+#avatars=1
+#chatstates=1
+
+# Transport features for VIP users, all features are enabled by default.
+[vip-features]
+#filetransfer=1
+#avatars=1
+#chatstates=1
 
 [logging]
 # log file, needs to be unique for each spectrum instance
-log_file=/var/log/jabber/spectrum-SPECTRUMGEN2PROTOCOL.log
+log_file=/var/log/spectrum/SPECTRUMGEN2PROTOCOL.log
 
 # log areas
 # combination of: xml, purple
-#log_areas=xml;purple
+log_areas=xml;purple
 
 [database]
 # mysql or sqlite
 type=sqlite
 
-# hostname (for mysql)
+# hostname (not needed for sqlite)
 #host=localhost
 
-# username (for mysql)
+# username (not needed for sqlite)
 #user=user
 
-# password (for mysql)
+# password (not needed for sqlite)
 #password=password
-# for type=sqlite, set path to database file here
-# for type=mysql it's name of database
-database=/var/spool/jabber/spectrum-SPECTRUMGEN2PROTOCOL/spectrum.db
+# sqlite: set path to database file here
+# mysql: set to name of database
+database=/var/lib/spectrum/SPECTRUMGEN2PROTOCOL/database/SPECTRUMGEN2PROTOCOL.sqlite
 # table prefix for multiple transport instances sharing the same database
-prefix=SPECTRUMGEN2PROTOCOL_localhost_
+#prefix=icq_
 
 [purple]
-# external ips (seperated by semicolons)
-#bind=0.0.0.0
-
 # avatar, vcard, roster storage
 # needs to be unique for each spectrum instance
-userdir=/var/spool/jabber/spectrum-SPECTRUMGEN2PROTOCOL
+userdir=/var/lib/spectrum/SPECTRUMGEN2PROTOCOL/userdir
