@@ -1,23 +1,0 @@
-#!/sbin/runscript
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pymsn-t/files/pymsn-t-0.11.2-initd,v 1.2 2007/06/04 20:48:44 griffon26 Exp $
-
-depend() {
-        need net
-        use jabber-server
-}
-
-start() {
-        ebegin "Starting SPECTRUMGEN2PROTOCOL XMPP/Spectrum Transport"
-        start-stop-daemon --start --pidfile /var/run/jabber/spectrum-SPECTRUMGEN2PROTOCOL.pid \
-                 --chuid jabber:jabber --exec /usr/bin/spectrum -- \
-                 /etc/spectrum/spectrum-SPECTRUMGEN2PROTOCOL.cfg
-        eend $?
-}
-
-stop() {
-        ebegin "Stopping SPECTRUMGEN2PROTOCOL XMPP/Spectrum Transport"
-        start-stop-daemon --stop --quiet --pidfile /var/run/jabber/spectrum-SPECTRUMGEN2PROTOCOL.pid
-        eend $?
-}
