@@ -1,0 +1,22 @@
+#!/sbin/runscript
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+depend() {
+        need net
+        use jabber-server
+}
+
+start() {
+        ebegin "Starting SPECTRUMGEN2PROTOCOL XMPP/Spectrum Transport"
+        start-stop-daemon --start --pidfile ${PIDFILE} \
+                 --chuid jabber:jabber --exec /usr/bin/spectrum -- ${CONFFILE}
+        eend $?
+}
+
+stop() {
+        ebegin "Stopping SPECTRUMGEN2PROTOCOL XMPP/Spectrum Transport"
+        start-stop-daemon --stop --quiet --pidfile ${PIDFILE}
+        eend $?
+}
